tests/outref/TAS01.ref

-- TAS01 : Issue syntax error for empty ARRAY constructor

SELECT ARRAY();

[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected RIGHT_PAREN, expecting SELECT or TABLE or VALUES or LEFT_PAREN
LINE 3:1: SELECT ARRAY();
                       ^
OCTO> SELECT ARRAY();
OCTO> 
